--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask==1.1.2
 Flask-Breadcrumbs==0.5.1
 Flask-Menu==0.7.2
 Flask-PyMongo==2.3.0
+html5lib-truncation==0.1.0
 itsdangerous==1.1.0
 six==1.14.0
 Werkzeug==1.0.1
