--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-PyMongo==2.3.0
 Flask-WTF==0.14.3
 html5lib-truncation==0.1.0
 itsdangerous==1.1.0
+pdfkit==0.6.1
 six==1.14.0
 Werkzeug==1.0.1
 WTForms==2.3.3
