--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask-WTF==0.14.3
 html5lib-truncation==0.1.0
 itsdangerous==1.1.0
 python-pdf==0.38
+secure==0.3.0
 six==1.14.0
 Werkzeug==1.0.1
 WTForms==2.3.3
