feat(upload): implement AWS S3 file upload js+python

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,11 @@
-dnspython==2.1.0
-email-validator==1.1.2
-Flask==1.1.2
-Flask-Breadcrumbs==0.5.1
-Flask-Mail==0.9.1
-Flask-Menu==0.7.2
-Flask-PyMongo==2.3.0
-Flask-WTF==0.14.3
-html5lib-truncation==0.1.0
-itsdangerous==1.1.0
-python-pdf==0.38
-secure==0.3.0
-six==1.14.0
-Werkzeug==1.0.1
+Flask_Breadcrumbs==0.5.1
 WTForms==2.3.3
+pymongo==3.11.3
+python_pdf==0.38
+Flask_PyMongo==2.3.0
+Flask_Mail==0.9.1
+Flask==1.1.2
+Flask_WTF==0.14.3
+secure==0.3.0
+html5lib_truncation==0.1.0
+pydf==12
