--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-Flask_Breadcrumbs==0.5.1
-WTForms==2.3.3
-pymongo==3.11.3
-python_pdf==0.38
-Flask_PyMongo==2.3.0
-Flask_Mail==0.9.1
-Flask==1.1.2
-Flask_WTF==0.14.3
 secure==0.3.0
+Flask_WTF==0.14.3
+pymongo==3.11.3
+Flask_PyMongo==2.3.0
+WTForms==2.3.3
+boto3==1.17.84
+requests==2.22.0
+python_pdf==0.38
+email-validator==1.1.2
 html5lib_truncation==0.1.0
+Flask_Breadcrumbs==0.5.1
+Flask==1.1.2
+Flask_Mail==0.9.1
 pydf==12
